<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.webswing</groupId>
	<artifactId>webswing</artifactId>
	<version>102.0.0</version>
	<packaging>pom</packaging>
	<url>http://www.webswing.org</url>
	<scm>
		<developerConnection>scm:git:https://bitbucket.org/webswing/webswing-legacy.git</developerConnection>
	</scm>
	<modules>
		<module>webswing-server</module>
		<module>webswing-admin</module>
		<module>webswing-server-launcher</module>
		<module>webswing-api</module>
		<module>webswing-app-toolkit</module>
		<module>webswing-app-toolkit-fx</module>
		<module>webswing-app-toolkit-java8</module>
		<module>webswing-app-launcher</module>
		<module>webswing-app-interface</module>
		<module>webswing-directdraw</module>
		<module>webswing-demo</module>
		<module>webswing-assembly</module>
	</modules>
	<properties>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jersey.version>2.27</jersey.version>
		<atmosphere.js.version>2.3.1</atmosphere.js.version>
		<atmosphere.version>2.5.2</atmosphere.version>
		<jetty.version>9.4.14.v20181114</jetty.version>
		<activemq.version>5.15.6</activemq.version>
		<shiro.version>1.4.0</shiro.version>
		<protobuf.version>3.6.1</protobuf.version>
		<apache.common.codec.version>1.11</apache.common.codec.version>
		<apache.bcel.version>6.2</apache.bcel.version>
		<freehep.vectorgraphics.version>2.3</freehep.vectorgraphics.version>
		<lz4.version>1.4.1</lz4.version>
		<pngencoder.version>1</pngencoder.version>
		<slf4j.version>1.7.25</slf4j.version>
		<javax.validation.api.version>2.0.1.Final</javax.validation.api.version>
		<log4j2.version>2.11.0</log4j2.version>
		<httpclient.version>4.5.5</httpclient.version>
		<jackson.version>2.9.8</jackson.version>
		<commons.cli.version>1.4</commons.cli.version>
		<commons.lang3.version>3.7</commons.lang3.version>
		<commons.io.version>2.6</commons.io.version>
		<javax.ws.rs.version.api>2.1</javax.ws.rs.version.api>
		<guava.version>26.0-jre</guava.version>
		<javax.annotation.api>1.3.2</javax.annotation.api>
		<baseutil.version>1.0</baseutil.version>
		<jackson.mapper.asl>1.9.2</jackson.mapper.asl>
		<powermock.version>1.6.2</powermock.version>
		<glassfish.hk2.version>2.5.0-b42</glassfish.hk2.version>
		<commons.beanutils.version>1.9.3</commons.beanutils.version>
		<hk2.external.version>2.5.0-b32</hk2.external.version>
		<log4j.version>2.11.0</log4j.version>
		<talc.cbb.version>8.2.1</talc.cbb.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>${commons.beanutils.version}</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish.hk2.external</groupId>
				<artifactId>aopalliance-repackaged</artifactId>
				<version>${hk2.external.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-cli</groupId>
				<artifactId>commons-cli</artifactId>
				<version>${commons.cli.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons.lang3.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.annotation</groupId>
				<artifactId>javax.annotation-api</artifactId>
				<version>${javax.annotation.api}</version>
			</dependency>
			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>${javax.validation.api.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.ws.rs</groupId>
				<artifactId>javax.ws.rs-api</artifactId>
				<version>${javax.ws.rs.version.api}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.module</groupId>
				<artifactId>jackson-module-jaxb-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.jaxrs</groupId>
				<artifactId>jackson-jaxrs-base</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.jaxrs</groupId>
				<artifactId>jackson-jaxrs-json-provider</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient.version}</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-mapper-asl</artifactId>
				<version>${jackson.mapper.asl}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>com.github.os72</groupId>
					<artifactId>protoc-jar-maven-plugin</artifactId>
					<version>2.5.0.4</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.2</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<pushChanges>false</pushChanges>
					<scmCommentPrefix>
					</scmCommentPrefix>
					<tagNameFormat>${project.version}</tagNameFormat>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
           			<compilerArgs>
						<arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>  
						<arg>--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg> 
 						<arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>                   	
 						<arg>--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED</arg>       
						<arg>--add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.awt.dnd=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.awt.im=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg> 
						<arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>   
						<arg>--add-exports=java.desktop/sun.java2d.loops=ALL-UNNAMED</arg>
					    <arg>--add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED</arg>  
						<arg>--add-exports=java.base/sun.nio.cs=ALL-UNNAMED</arg> 
						<arg>--add-exports=java.base/sun.security.util=ALL-UNNAMED</arg>
						<arg>--add-exports=java.desktop/sun.print=ALL-UNNAMED</arg>
						<arg>--add-exports=javafx.graphics/com.sun.glass.events=ALL-UNNAMED</arg>
						<arg>--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</arg>
						<arg>--add-exports=javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED</arg>
                	</compilerArgs>					
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<id>enforce-java</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>1.8.0</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>2.5.1</version>
				<inherited>false</inherited>
				<executions>
					<execution>
						<id>install-jar-lib</id>
						<goals>
							<goal>install-file</goal>
						</goals>
						<phase>validate</phase>
						<configuration>
							<groupId>com.objectplanet.image</groupId>
							<artifactId>pngencoder</artifactId>
							<version>1</version>
							<packaging>jar</packaging>
							<file>${basedir}/lib/pngencoder.jar</file>
							<generatePom>true</generatePom>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>